clip-path: path() ignores page zooming (Command-+) https://bugs.webkit.org/show_bug.cgi?id=217311 <rdar://problem/69977271>

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Imported all clip-path web platform tests.
Some of them don't pass yet for unrelated reasons, skipped in TestExpectations.

* web-platform-tests/css/css-masking/clip-path/clip-path-path-interpolation-with-zoom-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-interpolation-with-zoom.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-with-zoom-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-with-zoom-hittest-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-with-zoom-hittest.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-with-zoom.html: Added.
        These tests test the actual zoom-related issues.

* resources/import-expectations.json:
* web-platform-tests/css/css-masking: Added.
* web-platform-tests/css/css-masking/clip-path: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-001-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-001.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-002-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-002.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-003-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-003.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-004-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-004.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-005-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-005.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-006-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-006.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-007-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-007.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-008-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-circle-008.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-columns-shape-001-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-columns-shape-001.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-columns-shape-002-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-columns-shape-002.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-descendant-text-mutated-001-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-descendant-text-mutated-001.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-document-element-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-document-element-will-change-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-document-element-will-change.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-document-element.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-element-userSpaceOnUse-001-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-element-userSpaceOnUse-001.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-element-userSpaceOnUse-002-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-element-userSpaceOnUse-002.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-element-userSpaceOnUse-003-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-element-userSpaceOnUse-003.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-element-userSpaceOnUse-004-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-element-userSpaceOnUse-004.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-001-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-001.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-002-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-002.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-003-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-003.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-004-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-004.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-005-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-005.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-006-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-006.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-007-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-007.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-008-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-ellipse-008.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-filter-order-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-filter-order.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-filter-radius-clips-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-filter-radius-clips.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-fixed-nested-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-fixed-nested.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-inline-001-expected.xht: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-inline-001.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-inline-002-expected.xht: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-inline-002.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-inline-003-expected.xht: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-inline-003.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-001-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-001.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-002-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-002.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-interpolation-001-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-interpolation-001.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-interpolation-002-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-path-interpolation-002.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-001-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-001.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-002-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-002.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-003-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-003.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-004-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-004.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-005-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-005.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-006-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-006.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-007-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-007.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-008-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-008.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-009-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-009.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-010-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-010.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-011-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-011.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-012-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-012.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-013-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-polygon-013.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-reference-box-001-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-reference-box-001.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-reference-box-002-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-reference-box-002.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-reference-box-003-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-reference-box-003.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-reference-box-004-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-reference-box-004.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-reference-restore-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-reference-restore.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-rotated-will-change-transform-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-rotated-will-change-transform.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-scroll-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-scroll.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-svg-invalidate-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-svg-invalidate.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-transform-mutated-001-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-transform-mutated-001.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-transform-mutated-002-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-transform-mutated-002.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-url-reference-change-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-url-reference-change-from-empty-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-url-reference-change-from-empty.html: Added.
* web-platform-tests/css/css-masking/clip-path/clip-path-url-reference-change.html: Added.
* web-platform-tests/css/css-masking/clip-path/interpolation-expected.txt: Added.
* web-platform-tests/css/css-masking/clip-path/interpolation.html: Added.
* web-platform-tests/css/css-masking/clip-path/reference: Added.
* web-platform-tests/css/css-masking/clip-path/reference-local-url-with-base-001-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/reference-local-url-with-base-001.html: Added.
* web-platform-tests/css/css-masking/clip-path/reference-mutated-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/reference-mutated.html: Added.
* web-platform-tests/css/css-masking/clip-path/reference-nonexisting-existing-local-expected.html: Added.
* web-platform-tests/css/css-masking/clip-path/reference-nonexisting-existing-local.html: Added.
* web-platform-tests/css/css-masking/clip-path/reference/clip-path-path-with-zoom-hittest-ref.html: Added.
* web-platform-tests/css/css-masking/clip-path/reference/w3c-import.log: Added.
* web-platform-tests/css/css-masking/clip-path/svg-clipPath.svg: Added.
* web-platform-tests/css/css-masking/clip-path/w3c-import.log: Added.

Source/WebCore:

Added a zoom property to BasicShapePath.

When BasicShapePath is created from a clip-path, the shape's zoom received the effective zoom.
The internal cache in BasicShapePath now uses the zoom as an additional cache key, in addition
to windRule, offset and byteStream. Renamed SVGPathTranslatedByteStream to SVGPathTransformedByteStream.

Tests:
       imported/w3c/web-platform-tests/css/css-masking/clip-path/clip-path-path-interpolation-with-zoom.html
       imported/w3c/web-platform-tests/css/css-masking/clip-path/clip-path-path-with-zoom-hittest.html
       imported/w3c/web-platform-tests/css/css-masking/clip-path/clip-path-path-with-zoom.html

Also imported the rest of the w3c clip-path tests.

* css/BasicShapeFunctions.cpp:
(WebCore::basicShapeForValue):
* css/BasicShapeFunctions.h:
* rendering/style/BasicShapes.cpp:
(WebCore::SVGPathTransformedByteStream::SVGPathTransformedByteStream):
(WebCore::SVGPathTransformedByteStream::operator== const):
(WebCore::SVGPathTransformedByteStream::operator!= const):
(WebCore::SVGPathTransformedByteStream::path const):
(WebCore::TransformedByteStreamPathPolicy::isKeyNull):
(WebCore::TransformedByteStreamPathPolicy::createValueForKey):
(WebCore::cachedTransformedByteStreamPath):
(WebCore::BasicShapePath::path):
(WebCore::BasicShapePath::operator== const):
(WebCore::BasicShapePath::blend const):
(WebCore::SVGPathTranslatedByteStream::SVGPathTranslatedByteStream): Deleted.
(WebCore::SVGPathTranslatedByteStream::operator== const): Deleted.
(WebCore::SVGPathTranslatedByteStream::operator!= const): Deleted.
(WebCore::SVGPathTranslatedByteStream::isEmpty const): Deleted.
(WebCore::SVGPathTranslatedByteStream::path const): Deleted.
(WebCore::TranslatedByteStreamPathPolicy::isKeyNull): Deleted.
(WebCore::TranslatedByteStreamPathPolicy::createValueForKey): Deleted.
(WebCore::cachedTranslatedByteStreamPath): Deleted.
        Add zoom to BasicShapePath and related internal structure.

* rendering/style/BasicShapes.h:
* style/StyleBuilderConverter.h:
(WebCore::Style::BuilderConverter::convertClipPath):
        Read zoom from current style when creating a BasicShapeClipPath.

LayoutTests:

* TestExpectations:
        Marked newly imported clip-path w3c tests that don't pass yet as expected failure.
        Some of them have open bugs, the others need triage.


Canonical link: https://commits.webkit.org/230205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268138 268f45cc-cd09-0410-ab3c-d52691b4dbfc